Archive/874b892d6e3ef993b55f7f18b5fcc229-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In member function ‘void derived_value::g()’:
main.cpp:6:12: error: ‘struct value::inner’ is private
     struct inner { char c_; };
            ^
main.cpp:15:16: error: within this context
     void g() { inner i = f(); }
                ^
